# ofd2html-python

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: pages.yml
src/ofd2html/: __init__.py  gv.py
src/ofd2html/api/: app.py  routes.py  schemas.py
src/ofd2html/html/: exporter.py  template.py
src/ofd2html/pkg/: container.py
src/ofd2html/reader/: ofd_reader.py  resource_locator.py
src/ofd2html/render/: color.py  page_renderer.py  path.py
tests/: conftest.py  test_api_convert.py  test_render_path.py
web/: app.js  index.html
